--- a/sdk/dotnet/src/Microsoft.Datasync.Client.SQLiteStore/Microsoft.Datasync.Client.SQLiteStore.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client.SQLiteStore/Microsoft.Datasync.Client.SQLiteStore.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <EnableArtifacts>false</EnableArtifacts>
   </PropertyGroup>
 
   <PropertyGroup>
     <Description>An offline store for the Microsoft Datasync Framework built on SQLite.  Formally known as Azure Mobile Apps</Description>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <!--<GeneratePackageOnBuild>true</GeneratePackageOnBuild>-->
     <PackageIcon>icon.png</PackageIcon>
     <PackageTags>azure;mobile;datasync;microsoft</PackageTags>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
