--- a/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.44">
+<Project Sdk="MSBuild.Sdk.Extras/3.0.44">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst;net6.0-windows10.0.19041.0;net6.0;netstandard2.0;monoandroid12.0;xamarin.ios10</TargetFrameworks>
@@ -6,11 +6,13 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
+    <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
 		<Description>A client package for communicating with a Microsoft Datasync service.  Formally known as Azure Mobile Apps</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageTags>azure;mobile;datasync;microsoft</PackageTags>
 		<Product>$(AssemblyName) ($(TargetFramework))</Product>
+    <EnableArtifacts>false</EnableArtifacts>
 	</PropertyGroup>
 
 	<Import Project="..\..\Shared.Build.props" />
